--- a/fling.html
+++ b/fling.html
@@ -166,9 +166,9 @@ p.TPwhite {
 }
 #PerdueQuote {
   position: absolute;
-  top: 280px;
-  left: 80px;
-  width: 540px;
+  top: 180px;
+  left: 16px;
+  width: 500px;
   height: 810px;
   background-color: #000033;
 }
@@ -176,11 +176,14 @@ p.TPwhite {
 </style>
 <body>
 <div id="PerdueQuote">
-<p align="center" style="font-size:22px; line-height: 1.8"><i>"The procedure involves stating to the mistaken opponent a contradictory consequence of his own position in order to draw out its absurdities."</i><br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+<p>The first debate in the Collected Topics begins with the Defender putting forth the absurd view that “Whatever is a color is necessarily red.” Obviously wrong, the Defender is put in this position in the first debate  to help one understand the formal procedure for flinging an absurd consequence stemming from an incorrect pervasion.
+The procedure involves stating to the Defender a contradictory consequence of his or her own position in order to draw out its absurdities. For all incorrect views there are logical conse­quences. Through demonstrating logical consequences the flaws in an incorrect view have the chance of becoming as manifest to the Defender as they are to the Challenger.
+For example, in order to demonstrate in a consequence that it is not the case that all colors are red, the Challenger must choose a counterexample. The counterexample must be something which is a color but is not red. For instance, the color of a white religious shell. This is used as the subject (the first element). Then, the outer position of the statement of pervasion, red, is put as the predicate of the consequence (the second element) and the inner position of the statement of pervasion, color, is put as the reason of the consequence (the third element). In this way, if someone says that whatever is a color is necessarily red, in response to that mistaken view the Challenger may fling back a logical consequence using the counterexample of the color of a white religious shell: “It [absurdly] follows that the color of a white religious shell is red because of being a color.
+On this page the user fills in the fields and submits the subjects. The page displays the incorrect pervasion and the absurd consequence flowing from it.</p>
 </div>
 
 <div id="vennbodyfl">
-<h2 align="center">How Absurd Consequences Flow From Wrong Pervasions<br></h2>
+<h2 align="center">How to Fling a Consequence<br></h2>
 <h3 align="center">Step 1. Enter Opponent's Incorrect Pervasion<br>(for instance, outer value 'form', inner value 'existent')</h2>
 
 <div class="static3">
