--- a/fourposs.html
+++ b/fourposs.html
@@ -165,11 +165,13 @@ p.TPwhite {
 </style>
 <body>
 <div id="PerdueQuote">
-<p align="center" style="font-size:22px; line-height: 1.8"><i>"A common locus is not something that exists halfway between the two and is neither. Rather, it is something which is both of them."</i><br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+<p>If there are four possibilities between two phenomena, all the points of similarity and difference are exemplified. When two phenomena have four possibilities for comparison, there is no pervasion between them: whatever is A is not necessarily B, and whatever is B is not necessarily A. Nevertheless, there is at least on common locus that is both A and B. There is also (usually) something which is neither.
+On page when the fields are submitted the diagram and the statement “X is both Y and Z” display the meaning of two phenomena with a common locus but that do not pervade each other.
+As an example of this, impermanent and different-from-functioning-thing have four possibilities. Their common locus is impermanent phenomenon, copper pot, form, and so forth. That which is impermanent but not different-from-functioning-thing is functioning thing. That which is different-from-functioning-thing but not impermanent is space. The horns of a rabbit is neither.</p>
 </div>
 
 <div id="fourposs">
-<h2 align="left"><br><br>Four Possibilities: Finding A Common Locus<br></h2>
+<h2 align="left"><br><br>Phenomena Having Four Possibilities<br></h2>
 
 <div id="circleLEFT"></div>
 <div id="circleRIGHT"></div>
