--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
 <li><a href="threeposs.html">Phenomena Having Three Possibilies</a><br></li><br>
 <li><a href="fourposs.html">Phenomena Having Four Possibilities</a><br></li><br>
 </ul>
-<li><a href="modes.html">Analyzing Syllogisms: the Three Modes of a Correct Reason</a><br></li><br>
-<li><a href="fling.html">The Procedure for Flinging an Absurd Consequence</a><br></li><br>
+<li><a href="modes.html">The Three Modes of a Correct Reason</a><br></li><br>
+<li><a href="fling.html">How to Fling a Consequence</a><br></li><br>
 
 
 </ul>
-<p class="yellow">Under construction. Copyright © William Magee, 2019. Source code available under Creative Commons License at <a href="http://github.com/wam7c/debate"> Github</a>.</p>
+<p class="yellow">Under construction. Copyright © William Magee, 2019. Source code available under Creative Commons License at <a href="http://github.com/wam7c/debate"> Github</a>.<p>
+<p>Read an article I have written about Open-Source Geshe <a href="Open-Source_Geshe.pdf">here.</a></p>
 
 </div>
 
