--- a/mu.html
+++ b/mu.html
@@ -167,14 +167,24 @@
 	
 
 <div id="PerdueQuote">
-<p align="center" style="font-size:22px; line-height: 1.8">One main purpose of debate is to establish the boundaries of pervasion (khyab mtha’) between phenomena. The bound­aries of pervasion or extension of a phenomenon is its range—what it pervades, what it includes, and what it excludes. By understanding clearly a phenomenon’s bound­aries of pervasion one is able to ascertain the scope of that phenomenon. The essential tool in this investigation is the analytical comparison of phenomena. By comparing two phenomena and establishing their relative boundaries of pervasion, the limits of each phenomenon in relation to the other, one comes to understand the points of similarity and dissimilarity between them.<br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+<p>Initially, in the Collected Topics, debates arise regarding the boundaries of pervasion between two phenomena. Perdue states:</p>
+<blockquote>One main purpose of debate is to establish the boundaries of pervasion (khyab mtha’) between phenomena. The bound­aries of pervasion 
+or extension of a phenomenon is its range—what it pervades, 
+what it includes, and what it excludes. By understanding clearly a phenomenon’s bound­aries of pervasion one is able to ascertain the 
+scope of that phenomenon. The essential tool in this investigation is the analytical comparison of phenomena. By comparing two 
+phenomena and establishing their relative boundaries of pervasion, the limits of each phenomenon in relation to the other, 
+one comes to understand the points of similarity and dissimilarity between them.</blockquote> 
+<p>Perdue illustrates the boundaries of pervasion between phenomena by means of the four Euler diagrams often seen 
+in discussions of set theory. These are four possible diagrams  illustrating the only four possible boundaries of pervasion. In presentations of Tibetan logic these four are: mutually inclusive phenomena, mutually exclusive phenomena, phenomena having three possibilities, and phenomena having four possibilities. Within phenomena having three possibilities there are two possible diagrams, one with phenomena A in the inner circle and one with phenomena B in the inner circle.2
+The two phenomena under comparison are not concepts or sets, but rather those things which can occupy the subject position 
+in a syllogism. For instance, “sound” in the syllogism, “sound is impermanent because of being a product.” </p>
 </div>
 	
 	
 	
 	
 <div id="fourvenn">
-<h2 align="center">The Possibilities for Comparison of Phenomena<br></h2>
+<h2 align="center">The Comparison of Phenomena<br></h2>
 <div id="mutinc"><p align="center"><a href="mutualinc.html">Mutually Inclusive</a></p>
 <div id="circleBMI"></div>
 <div id="circleSMI"></div>
