--- a/mutualex.html
+++ b/mutualex.html
@@ -44,6 +44,13 @@ p.TPblack {
   color: black;
   font-size: 18pt;
 }
+#PerdueQuote {
+  position: absolute;
+  top: 280px;
+  left: 10px;
+  width: 340px;
+  height: 810px;
+}
 #mutualex {
   position: absolute;
   top: 0px;
@@ -161,8 +168,13 @@ p.TPblack {
 }
 </style>
 <body>
+<div id="PerdueQuote">
+<blockquote align="left" style="font-size:2opx; line-height: 1.8">
+Phenomena that are mutually exclusive must be different and have no common locus. Non-existents such as the horns of a rabbit cannot be mutually exclusive with anything because they are not phenomena. 
+On this page when the fields are submitted, the diagram and the statement “There is nothing that is both A and B” reveal the meaning of no common locus. As Perdue points out, a common locus is not something that exists half-way between the two and is neither. Rather, it is something which is both. 
+</div>
 <div id="mutualex">
-<h2 align="left"><br><br>Mutually Exclusive: No Common Locus<br></h2>
+<h2 align="left"><br><br>Mutually Exclusive Phenomena<br></h2>
 <div id="circleLEFT"></div>
 <div id="circleRIGHT"></div>
 <div id="neitherFP"><p class="TPblack" align="center"><span id='neitherText'></span> </p></div>
