--- a/mutualinc.html
+++ b/mutualinc.html
@@ -60,7 +60,7 @@ p.TPblack {
 }
 #PerdueQuote {
   position: absolute;
-  top: 280px;
+  top: 180px;
   left: 80px;
   width: 540px;
   height: 810px;
@@ -185,7 +185,8 @@ p.TPblack {
 <body>
 
 <div id="PerdueQuote">
-<h2>The Eight Approaches to Pervasion:</h2>
+<p>Phenomena that are mutually inclusive must be different and possess the eight approaches to pervasion. Non-existents such as the horns of a rabbit cannot be mutually inclusive with anything because they are not phenomena. A difference in meaning or even in nomenclature qualifies as different. For instance, Dr. Perdue and Daniel Perdue are two different phenomena even though these words refer to the same person. On this page, When the fields are filled in and submitted, Left and Right will propagate into the eight approaches to pervasion below.</p>
+<h3><br><br>The Eight Approaches to Pervasion:</h3>
 <ul>
 <li style="font-size:22px">Whatever is [ <span id='leftText2'></span> ] is necessarily [ <span id='rightText2'></span> ].</li><br>
 <li style="font-size:22px">Whatever is [ <span id='rightText3'></span> ] is necessarily [ <span id='leftText3'></span> ].</li><br>
