--- a/threeposs.html
+++ b/threeposs.html
@@ -137,11 +137,14 @@ p.TPwhite {
 </style>
 <body>
 <div id="PerdueQuote">
-<p align="center" style="font-size:22px; line-height: 1.8"><i>"Pervasion does not mean that the sign (the reason) <i>is</i> the predicate to be proven. Rather, the meaning of pervasion is that the predicate to be proven encompasses the sign and is invariably associated with it."</i><br><br>Daniel Perdue, <i>Debate in Tibetan Buddhism</i></p>
+
+<blockquote align="left" style="font-size:2opx; line-height: 1.8">
+When there are three possibilities between two phenomena, there must be a common locus between A and B, something that is A but not B and something that is neither. Two Euler diagrams are possible here, depending on whether A pervades B or B pervades A in the comparison.
+On this page, when the fields are submitted, the diagram and the statement “Whatever is A is necessarily B” display the meaning of pervasion. For instance, in the syllogism sound is impermanent because of being produced, the meaning of pervasion is that impermanent encompasses being a product and is invariably associated with it.</blockquote>
 </div>
 		
 <div id="threeposs">
-<h2 align="left"><br><br>Pervasion Statements: Three Possibilities<br></h2>
+<h2 align="left"><br><br>Phenomena Having Three Possibilities<br></h2>
 <div id="circleBTP"></div>
 <div id="circleSTP"></div>
 <div id="neitherTP"><p class="TPwhite" align="center"><span id='neitherText'></span> </p></div>
@@ -160,9 +163,9 @@ p.TPwhite {
 <input type='button' onclick='enterNeither()' value='Neither Inner Nor Outer'/>
 </div>
 <div id="pervasionTP">
-	<p align="center" class="TPblack">Whatever is a [<span id='innerText2'></span>] is necessarily a [<span id='outerText2'></span> ].</p> 
+	<p align="center" class="TPblack">Whatever is [<span id='innerText2'></span>] is necessarily [<span id='outerText2'></span> ].</p> 
 	<p align="center" class="TPblack">Whatever is not [<span id='outerText3'></span>] is necessarily not [<span id='innerText3'></span>].</p> 
-	<p align="center" class="TPblack">[<span id='neitherText2'></span>] is neither a [<span id='innerText4'></span>] nor a [<span id='outerText4'></span>].<br></p><p align="center"><a href="index.html">Back</a></p></div>
+	<p align="center" class="TPblack">[<span id='neitherText2'></span>] is neither [<span id='innerText4'></span>] nor [<span id='outerText4'></span>].<br></p><p align="center"><a href="index.html">Back</a></p></div>
  </div>
 
 </body></html>
